[gd_scene load_steps=3 format=3 uid="uid://c2ql00211pa3m"]

[ext_resource type="Script" uid="uid://b2cg186wy2hn5" path="res://scripts/interface/configuracoes.gd" id="1_as3r0"]
[ext_resource type="Texture2D" uid="uid://dpav8kx02vutm" path="res://assets/interface/configuracao_fase.png" id="2_10ifb"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_as3r0")

[node name="fundo" type="TextureRect" parent="."]
offset_right = 972.0
offset_bottom = 2127.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_10ifb")

[node name="voltar" type="Button" parent="."]
offset_left = 12.0
offset_top = 772.0
offset_right = 83.0
offset_bottom = 837.0
theme_override_font_sizes/font_size = 40
flat = true

[node name="aumentar" type="Button" parent="."]
offset_left = 198.0
offset_top = 623.0
offset_right = 337.0
offset_bottom = 704.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
flat = true

[node name="diminuir" type="Button" parent="."]
offset_left = 50.0
offset_top = 623.0
offset_right = 191.0
offset_bottom = 708.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
flat = true

[node name="efeitos_sonoros" type="Button" parent="."]
offset_left = 51.0
offset_top = 508.0
offset_right = 333.0
offset_bottom = 594.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
flat = true

[node name="musica" type="Button" parent="."]
offset_left = 50.0
offset_top = 396.0
offset_right = 333.0
offset_bottom = 479.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
flat = true

[node name="menu" type="Button" parent="."]
offset_left = 53.0
offset_top = 281.0
offset_right = 333.0
offset_bottom = 366.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "MENU PRINCIPAL
"
flat = true

[connection signal="button_up" from="voltar" to="." method="_on_voltar_button_up"]
[connection signal="button_up" from="aumentar" to="." method="_on_aumentar_button_up"]
[connection signal="button_up" from="diminuir" to="." method="_on_diminuir_button_up"]
[connection signal="button_up" from="efeitos_sonoros" to="." method="_on_efeitos_sonoros_button_up"]
[connection signal="button_up" from="musica" to="." method="_on_musica_button_up"]
[connection signal="button_up" from="menu" to="." method="_on_menu_button_up"]
